@@ -8,7 +8,7 @@ import java.util.concurrent.Executors;
 public class TesteMultiplasThreads {
 
     public static void main(String[] args) throws InterruptedException {
-        ExecutorService executor = Executors.newFixedThreadPool(10000); // Cria um pool com 10000 threads
+        ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor(); // Cria threads virtuais, que não serão mapeadas pelo sistema operacional
         Instant inicio = Instant.now();
         try (ExecutorService e = executor) {
             for (int i = 1; i <= 10000; i++) {
